--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <h1>Tim Soenksen</h1>
-        <p>Personal Project test</p>
+        <p>Personal Project Test</p>
 
     </body>
 </html>
