--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <h1>Tim Soenksen</h1>
-        <p>Personal Project Test</p>
+        <p>Makin' a new website, will be up shortly!</p>
 
     </body>
 </html>
