Basic Style and Functionality Done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href = "css/style.css">
+        <title>Tim's Portfolio Website</title>
     </head>
 
     <body>
-
-        <h1>Tim Soenksen</h1>
-        <p>Makin' a new website, will be up shortly!</p>
+        <header class="showcase">
+            <h1 class="nameShowcase">Tim Soenksen</h1>
+            <p class="nameSubtitle">(Projects will be showcased here eventually!)</p>
+        </header>
+        <div class="showcaseButtonContainer">
+            <button class="showcaseButton" onclick="location.href='https://docs.google.com/document/d/1pm7hdlkKR-pJ04g-tnzmjzdBYbBETnA4Wi1aCldKOiM/edit?usp=sharing'">Resume</button>
+            <button class="showcaseButton" onClick="parent.location='mailto:contact@timsoenksen.com?subject=Hello!'">Contact Me</button>
+        </div>
 
     </body>
 </html>
