--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href = "css/style.css">
         <title>Tim's Portfolio Website</title>
+        <link rel="shortcut icon" type="image/png" href="Resources/favicon.png">
     </head>
 
     <body>
